# grpc-helloworld-crossplatform

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: client.cpp  server.cpp
